Upgradde to java 11.